# openusd

./: Cargo.toml  test_minimal.usdc
src/: lib.rs  wasm.rs
src/usda/: parser.rs  token.rs
src/usdc/: coding.rs  mod.rs  writer.rs
tests/: kitchen_set.rs
